@@ -9,7 +9,7 @@ all: clean-pyc check test
 check:
 	@$(PYTHON) utils/check_sources.py -i sphinx/style/jquery.js \
 		-i sphinx/pycode/pgen2 -i sphinx/util/smartypants.py \
-		-i doc/_build -i ez_setup.py -i tests/path.py .
+		-i doc/_build -i ez_setup.py -i tests/path.py -i tests/coverage.py .
 
 clean: clean-pyc clean-patchfiles
 
